style.css
/*disable auto zooming on typing in input field*/

@media screen and (-webkit-min-device-pixel-ratio:0) {}


body {
    font-size: 1.5em;
    background: #111111;
    /*font-family: 'Ubuntu';*/
    color: white;
}


.verticalCenter {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-grow: 1;
}

.player {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    text-align: center;
    background: #BBBBBB;

    height: 98%;
    border: 2px solid #000000;
    border-radius: 10px;
    color: black;
}

.player button {
    font-size: 2em;
}

.texture {
    background-image: url("images/mottled_BG_1.png");
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 100%;


    display: flex;
    flex-direction: column;
    justify-content: top;
    padding-bottom: 0.5em;
}

.playerNameContainer {
    flex-grow: 0.1;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.playerName {
    width: 90%;
    text-align: center;
    margin-top: 15px;
    border-radius: 10px;
    border: 2px #DDDDDD solid;
    background: #FFFFFF;
    flex-grow: 0.7;
}


.lifeTotal {
    color: white;
    margin: auto;
}



.tint {
    background: rgba(0, 0, 0, 0.3);
    border-radius: 0.3em;

    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-grow: 1;
}

.lifeNumber {
    opacity: 1;
    font-size: 5em;
    line-height: 0.9em;
}

button {
    border-radius: 5px;
    border: 3px solid #000000;
    background: #FFFFFF;
    margin-right: 2px;
    margin-left: 2px;
    /*height: 100%;*/
    color: black;
}

button:active {
    filter: invert(100%);
}


.addBtn {
    width: 100px;
    height: 100px;
}

.hudBtn {
    width: auto;
}


.lifeButtonContainer {
    display: flex;

    flex-direction: row;

    justify-content: center;
    width: 100%;
}

.lifeButton {
    /*width: 100%;*/
    flex-grow: 1;
}

.customizationPanel {
    background-color: #FFFFFF;
    border-radius: 5px;
    margin: auto;
    flex-grow: 0.1;
    margin-top: 0.5em;
    display: flex;
    flex-direction: column;
}

.colorsList {
    border: 2px #DDDDDD solid;
    border-radius: 3px;
    background: #DDDDDD;
    font-size: 30px;
    text-align: center;
    display: block;
    margin: auto;
    width: 80%;
    flex-grow: 0.5;
}

.manaBtnContainer {
    flex-grow: 1;
    display: flex;


    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.manaBtnWrapper {
    margin: 0px;
    flex-grow: 0;
}

.manaBtn {
    background-color: black;
    background-position: center center;
    background-size: 95%;
    border-radius: 30px;
    height: 50px;
    width: 50px;
}

.B {
    background-image: url("images/B_BW.png");
}

.G {
    background-image: url("images/G_BW.png");
}

.R {
    background-image: url("images/R_BW.png");
}

.U {
    background-image: url("images/U_BW.png");
}

.W {
    background-image: url("images/W_BW.png");
}

.playerBannersContainer {
    border: none;
    border-spacing: 0;
    height: 100%;
    /*width: 100%;*/
    display: flex;


    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.hudContainer {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}


.hudItem {}

.colorSelector {
    color: white;
    display: flex;


    justify-content: center;
    flex-direction: column;
    flex-wrap: wrap;
}

.colorSelector div {
    flex-grow: 1;
}

.jumbotron {
    text-align: center;
    color: black;
}

.commanderDamage {
    display: flex;


    justify-content: right;
    flex-direction: column;
    flex-wrap: wrap;
}

.commanderDamage div {
    flex-grow: 1;
}

.commanderDamageEntry {
    text-align: right;
    width: 100%;
    word-wrap: break-word;
    font-size: 0.8em;
}

.commanderDamageNumber {
    font-size: 1.5em;
}

.poison {
    /*background-image: url("images/phyrexia.png");*/
    color: #6eb73a;
    background-size: contain;
    /* <------ */
    background-repeat: no-repeat;
    background-position: center center;
}

